{{$NEXT}}

1.003     2014-01-13 15:00:50 Europe/London
 - Simplify use of MooseX::Traits::Pluggable, applying it to the
   correct class

1.002     2013-06-20 11:21:00 Europe/London
 - Allow any component type, not just Model, View and Controller

1.001     2012-03-30 13:22:04 Europe/London
 - documentation fix, RT 76161
   https://rt.cpan.org/Public/Bug/Display.html?id=76161

1.0       2012-03-24 11:01:57 Europe/London
 - first non-devel release

0.1_03    2012-03-19 09:38:34 Europe/London
 - add prereq Config::General, move req to test-requires

0.1_02    2012-03-18 18:42:16 Europe/London
 - fix prereq Catalyst::Plugin::ConfigLoader

0.1_01    2012-03-14 12:15:40 Europe/London
 - Initial release