@@ -1,4 +1,6 @@
 {{$NEXT}}
+ - use the MOP instead of Sub::Install (thanks ribasushi and mst for
+   the hint)
 
 1.003     2014-01-13 15:00:50 Europe/London
  - Simplify use of MooseX::Traits::Pluggable, applying it to the
